snowflake-id-generator/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake-app
  labels:
    app: snowflake-app
  annotations:
    kubernetes.io/change-cause: "Deploy snowflake-app:v1.0.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: snowflake-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: snowflake-app
    spec:
      containers:
        - name: snowflake-app
          image: snowflake-app:v1.0.0
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "export SNOWFLAKE_SETTINGS_WORKED_ID=$(cat /config/worker-id) && java -jar /app/app.jar"]
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: worker-id-volume
              mountPath: /config
              readOnly: true
          livenessProbe:
            httpGet:
              path: /management/health/livenessState
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /management/health/readinessState
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: worker-id-volume
          emptyDir: {}
