snowflake-id-generator/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-service
  labels:
    app: snowflake-app
spec:
  type: NodePort
  selector:
    app: snowflake-app  # Чтобы selector нашел Pod, нужно добавить метку
  ports:
    - name: http
      protocol: TCP
      port: 8080        # Внутренний порт сервиса
      targetPort: 8080  # Порт контейнера
      nodePort: 30000   # Внешний порт узла (для доступа снаружи), допустимый диапазон 30000–32767
