snowflake-id-generator/kuard-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30001
  type: NodePort
