snowflake-id-generator/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-service
  labels:
    app: snowflake-app
spec:
  type: NodePort
  selector:
    app: snowflake-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
